// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`detail 1`] = `
{
  "annotation": {},
  "chartType": "roseParallel",
  "config": {
    "roseParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": false,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#6F6F6F",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rightTop",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "roseParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "中南-sum(销售额)",
      "__Dim_Color__": "中南-sum(销售额)",
      "__Dim_Detail__": "中南-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "2395179.3460000106",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "5991",
        "me_20250914101727_9d4f": "2395179.3460000106",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "中南",
      "me_20250914101727_9d4f": "2395179.3460000106",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "中南-sum(数量)",
      "__Dim_Color__": "中南-sum(数量)",
      "__Dim_Detail__": "中南-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "5991",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "5991",
        "me_20250914101727_9d4f": "2395179.3460000106",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "中南",
      "me_20250914101727_1111": "5991",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "东北-sum(销售额)",
      "__Dim_Color__": "东北-sum(销售额)",
      "__Dim_Detail__": "东北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "1863283.821",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "4852",
        "me_20250914101727_9d4f": "1863283.821",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "东北",
      "me_20250914101727_9d4f": "1863283.821",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "东北-sum(数量)",
      "__Dim_Color__": "东北-sum(数量)",
      "__Dim_Detail__": "东北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "4852",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "4852",
        "me_20250914101727_9d4f": "1863283.821",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "东北",
      "me_20250914101727_1111": "4852",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "东北-sum(销售额)",
      "__Dim_Color__": "东北-sum(销售额)",
      "__Dim_Detail__": "东北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "1298340.3229999975",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2976",
        "me_20250914101727_9d4f": "1298340.3229999975",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "东北",
      "me_20250914101727_9d4f": "1298340.3229999975",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "东北-sum(数量)",
      "__Dim_Color__": "东北-sum(数量)",
      "__Dim_Detail__": "东北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "2976",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2976",
        "me_20250914101727_9d4f": "1298340.3229999975",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "东北",
      "me_20250914101727_1111": "2976",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "西南-sum(销售额)",
      "__Dim_Color__": "西南-sum(销售额)",
      "__Dim_Detail__": "西南-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "1481964.9879999934",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "3802",
        "me_20250914101727_9d4f": "1481964.9879999934",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "西南",
      "me_20250914101727_9d4f": "1481964.9879999934",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "西南-sum(数量)",
      "__Dim_Color__": "西南-sum(数量)",
      "__Dim_Detail__": "西南-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "3802",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "3802",
        "me_20250914101727_9d4f": "1481964.9879999934",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "西南",
      "me_20250914101727_1111": "3802",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "中南-sum(销售额)",
      "__Dim_Color__": "中南-sum(销售额)",
      "__Dim_Detail__": "中南-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "2964133.059999989",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "6674",
        "me_20250914101727_9d4f": "2964133.059999989",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "中南",
      "me_20250914101727_9d4f": "2964133.059999989",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "中南-sum(数量)",
      "__Dim_Color__": "中南-sum(数量)",
      "__Dim_Detail__": "中南-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "6674",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "6674",
        "me_20250914101727_9d4f": "2964133.059999989",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "中南",
      "me_20250914101727_1111": "6674",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "西北-sum(销售额)",
      "__Dim_Color__": "西北-sum(销售额)",
      "__Dim_Detail__": "西北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "1198059.436000001",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "2281",
        "me_20250914101727_9d4f": "1198059.436000001",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "西北",
      "me_20250914101727_9d4f": "1198059.436000001",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "西北-sum(数量)",
      "__Dim_Color__": "西北-sum(数量)",
      "__Dim_Detail__": "西北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "2281",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "2281",
        "me_20250914101727_9d4f": "1198059.436000001",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "西北",
      "me_20250914101727_1111": "2281",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "华东-sum(销售额)",
      "__Dim_Color__": "华东-sum(销售额)",
      "__Dim_Detail__": "华东-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "3718172.451000012",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "8704",
        "me_20250914101727_9d4f": "3718172.451000012",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "华东",
      "me_20250914101727_9d4f": "3718172.451000012",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "华东-sum(数量)",
      "__Dim_Color__": "华东-sum(数量)",
      "__Dim_Detail__": "华东-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "8704",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "8704",
        "me_20250914101727_9d4f": "3718172.451000012",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "华东",
      "me_20250914101727_1111": "8704",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "华北-sum(销售额)",
      "__Dim_Color__": "华北-sum(销售额)",
      "__Dim_Detail__": "华北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "2019475.7170000044",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "4792",
        "me_20250914101727_9d4f": "2019475.7170000044",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "华北",
      "me_20250914101727_9d4f": "2019475.7170000044",
    },
    {
      "__Dim_Angle__": "消费者",
      "__Dim_ColorId__": "华北-sum(数量)",
      "__Dim_Color__": "华北-sum(数量)",
      "__Dim_Detail__": "华北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "4792",
      "__OriginalData__": {
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "4792",
        "me_20250914101727_9d4f": "2019475.7170000044",
      },
      "di_20250914101717_6266": "消费者",
      "di_20250914101717_a7e4": "华北",
      "me_20250914101727_1111": "4792",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "东北-sum(销售额)",
      "__Dim_Color__": "东北-sum(销售额)",
      "__Dim_Detail__": "东北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "912951.4030000004",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2055",
        "me_20250914101727_9d4f": "912951.4030000004",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "东北",
      "me_20250914101727_9d4f": "912951.4030000004",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "东北-sum(数量)",
      "__Dim_Color__": "东北-sum(数量)",
      "__Dim_Detail__": "东北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "2055",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2055",
        "me_20250914101727_9d4f": "912951.4030000004",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "东北",
      "me_20250914101727_1111": "2055",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "中南-sum(销售额)",
      "__Dim_Color__": "中南-sum(销售额)",
      "__Dim_Detail__": "中南-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "1356129.5789999985",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "3079",
        "me_20250914101727_9d4f": "1356129.5789999985",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "中南",
      "me_20250914101727_9d4f": "1356129.5789999985",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "中南-sum(数量)",
      "__Dim_Color__": "中南-sum(数量)",
      "__Dim_Detail__": "中南-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "3079",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "3079",
        "me_20250914101727_9d4f": "1356129.5789999985",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "中南",
      "me_20250914101727_1111": "3079",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "西南-sum(销售额)",
      "__Dim_Color__": "西南-sum(销售额)",
      "__Dim_Detail__": "西南-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "230624.96800000023",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "748",
        "me_20250914101727_9d4f": "230624.96800000023",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "西南",
      "me_20250914101727_9d4f": "230624.96800000023",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "西南-sum(数量)",
      "__Dim_Color__": "西南-sum(数量)",
      "__Dim_Detail__": "西南-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "748",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "748",
        "me_20250914101727_9d4f": "230624.96800000023",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "西南",
      "me_20250914101727_1111": "748",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "西北-sum(销售额)",
      "__Dim_Color__": "西北-sum(销售额)",
      "__Dim_Detail__": "西北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "369699.7640000004",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "1018",
        "me_20250914101727_9d4f": "369699.7640000004",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "西北",
      "me_20250914101727_9d4f": "369699.7640000004",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "西北-sum(数量)",
      "__Dim_Color__": "西北-sum(数量)",
      "__Dim_Detail__": "西北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "1018",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "1018",
        "me_20250914101727_9d4f": "369699.7640000004",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "西北",
      "me_20250914101727_1111": "1018",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "华东-sum(销售额)",
      "__Dim_Color__": "华东-sum(销售额)",
      "__Dim_Detail__": "华东-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "2748821.432000004",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "5254",
        "me_20250914101727_9d4f": "2748821.432000004",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "华东",
      "me_20250914101727_9d4f": "2748821.432000004",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "华东-sum(数量)",
      "__Dim_Color__": "华东-sum(数量)",
      "__Dim_Detail__": "华东-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "5254",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "5254",
        "me_20250914101727_9d4f": "2748821.432000004",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "华东",
      "me_20250914101727_1111": "5254",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "华北-sum(销售额)",
      "__Dim_Color__": "华北-sum(销售额)",
      "__Dim_Detail__": "华北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "938985.3690000006",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1853",
        "me_20250914101727_9d4f": "938985.3690000006",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "华北",
      "me_20250914101727_9d4f": "938985.3690000006",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "华北-sum(数量)",
      "__Dim_Color__": "华北-sum(数量)",
      "__Dim_Detail__": "华北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "1853",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1853",
        "me_20250914101727_9d4f": "938985.3690000006",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "华北",
      "me_20250914101727_1111": "1853",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "华东-sum(销售额)",
      "__Dim_Color__": "华东-sum(销售额)",
      "__Dim_Detail__": "华东-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "1457499.204",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "3082",
        "me_20250914101727_9d4f": "1457499.204",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "华东",
      "me_20250914101727_9d4f": "1457499.204",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "华东-sum(数量)",
      "__Dim_Color__": "华东-sum(数量)",
      "__Dim_Detail__": "华东-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "3082",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "3082",
        "me_20250914101727_9d4f": "1457499.204",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "华东",
      "me_20250914101727_1111": "3082",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "华北-sum(销售额)",
      "__Dim_Color__": "华北-sum(销售额)",
      "__Dim_Detail__": "华北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "655606.930999999",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1828",
        "me_20250914101727_9d4f": "655606.930999999",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "华北",
      "me_20250914101727_9d4f": "655606.930999999",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "华北-sum(数量)",
      "__Dim_Color__": "华北-sum(数量)",
      "__Dim_Detail__": "华北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "1828",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1828",
        "me_20250914101727_9d4f": "655606.930999999",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "华北",
      "me_20250914101727_1111": "1828",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "西北-sum(销售额)",
      "__Dim_Color__": "西北-sum(销售额)",
      "__Dim_Detail__": "西北-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "123130.028",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "251",
        "me_20250914101727_9d4f": "123130.028",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "西北",
      "me_20250914101727_9d4f": "123130.028",
    },
    {
      "__Dim_Angle__": "小型企业",
      "__Dim_ColorId__": "西北-sum(数量)",
      "__Dim_Color__": "西北-sum(数量)",
      "__Dim_Detail__": "西北-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "251",
      "__OriginalData__": {
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "251",
        "me_20250914101727_9d4f": "123130.028",
      },
      "di_20250914101717_6266": "小型企业",
      "di_20250914101717_a7e4": "西北",
      "me_20250914101727_1111": "251",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "西南-sum(销售额)",
      "__Dim_Color__": "西南-sum(销售额)",
      "__Dim_Detail__": "西南-sum(销售额)",
      "__MeaId__": "me_20250914101727_9d4f",
      "__MeaName__": "sum(销售额)",
      "__MeaValue__": "1167314.5400000024",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "2146",
        "me_20250914101727_9d4f": "1167314.5400000024",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "西南",
      "me_20250914101727_9d4f": "1167314.5400000024",
    },
    {
      "__Dim_Angle__": "公司",
      "__Dim_ColorId__": "西南-sum(数量)",
      "__Dim_Color__": "西南-sum(数量)",
      "__Dim_Detail__": "西南-sum(数量)",
      "__MeaId__": "me_20250914101727_1111",
      "__MeaName__": "sum(数量)",
      "__MeaValue__": "2146",
      "__OriginalData__": {
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "2146",
        "me_20250914101727_9d4f": "1167314.5400000024",
      },
      "di_20250914101717_6266": "公司",
      "di_20250914101717_a7e4": "西南",
      "me_20250914101727_1111": "2146",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "me_20250914101727_1111": "sum(数量)",
          "me_20250914101727_9d4f": "sum(销售额)",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          251,
          3718172.451000012,
        ],
        "measureValue": "__MeaValue__",
      },
      "id": "roseParallel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "东北-sum(数量)": "东北-sum(数量)",
          "东北-sum(销售额)": "东北-sum(销售额)",
          "中南-sum(数量)": "中南-sum(数量)",
          "中南-sum(销售额)": "中南-sum(销售额)",
          "华东-sum(数量)": "华东-sum(数量)",
          "华东-sum(销售额)": "华东-sum(销售额)",
          "华北-sum(数量)": "华北-sum(数量)",
          "华北-sum(销售额)": "华北-sum(销售额)",
          "西北-sum(数量)": "西北-sum(数量)",
          "西北-sum(销售额)": "西北-sum(销售额)",
          "西南-sum(数量)": "西南-sum(数量)",
          "西南-sum(销售额)": "西南-sum(销售额)",
        },
        "colorItems": [
          "中南-sum(销售额)",
          "中南-sum(数量)",
          "东北-sum(销售额)",
          "东北-sum(数量)",
          "西南-sum(销售额)",
          "西南-sum(数量)",
          "西北-sum(销售额)",
          "西北-sum(数量)",
          "华东-sum(销售额)",
          "华东-sum(数量)",
          "华北-sum(销售额)",
          "华北-sum(数量)",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "细分",
      "autoFormat": true,
      "encoding": "angle",
      "id": "di_20250914101717_6266",
    },
    {
      "alias": "地区",
      "autoFormat": true,
      "encoding": "color",
      "id": "di_20250914101717_a7e4",
    },
    {
      "encoding": "color",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "di_20250914101717_6266",
    ],
    "color": [
      "di_20250914101717_a7e4",
      "__MeaName__",
    ],
    "detail": [
      "di_20250914101717_a7e4",
      "__MeaName__",
    ],
    "radius": [
      "me_20250914101727_9d4f",
      "me_20250914101727_1111",
    ],
    "tooltip": [
      "di_20250914101717_6266",
      "di_20250914101717_a7e4",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "sum(销售额)",
      "autoFormat": false,
      "encoding": "radius",
      "format": {
        "auto": false,
        "kSep": true,
        "precision": 4,
        "precisionType": "significantDecimal",
        "type": "digit",
        "unit": null,
      },
      "id": "me_20250914101727_9d4f",
    },
    {
      "alias": "sum(数量)",
      "autoFormat": false,
      "encoding": "radius",
      "format": {
        "auto": false,
        "kSep": true,
        "precision": null,
        "precisionType": null,
        "type": "none",
        "unit": null,
      },
      "id": "me_20250914101727_1111",
    },
  ],
}
`;

exports[`detail 2`] = `
{
  "angleField": [
    "__Dim_Angle__",
    "__Dim_Detail__",
  ],
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "label": {
        "visible": true,
      },
      "nice": true,
      "orient": "radius",
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "nice": true,
      "orient": "angle",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "中南-sum(销售额)",
      "中南-sum(数量)",
      "东北-sum(销售额)",
      "东北-sum(数量)",
      "西南-sum(销售额)",
      "西南-sum(数量)",
      "西北-sum(销售额)",
      "西北-sum(数量)",
      "华东-sum(销售额)",
      "华东-sum(数量)",
      "华北-sum(销售额)",
      "华北-sum(数量)",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "roseParallel",
    "values": [
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "中南-sum(销售额)",
        "__Dim_Color__": "中南-sum(销售额)",
        "__Dim_Detail__": "中南-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "2395179.3460000106",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "5991",
          "me_20250914101727_9d4f": "2395179.3460000106",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_9d4f": "2395179.3460000106",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "中南-sum(数量)",
        "__Dim_Color__": "中南-sum(数量)",
        "__Dim_Detail__": "中南-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "5991",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "5991",
          "me_20250914101727_9d4f": "2395179.3460000106",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "5991",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "东北-sum(销售额)",
        "__Dim_Color__": "东北-sum(销售额)",
        "__Dim_Detail__": "东北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "1863283.821",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "4852",
          "me_20250914101727_9d4f": "1863283.821",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_9d4f": "1863283.821",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "东北-sum(数量)",
        "__Dim_Color__": "东北-sum(数量)",
        "__Dim_Detail__": "东北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "4852",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "4852",
          "me_20250914101727_9d4f": "1863283.821",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "4852",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "东北-sum(销售额)",
        "__Dim_Color__": "东北-sum(销售额)",
        "__Dim_Detail__": "东北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "1298340.3229999975",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2976",
          "me_20250914101727_9d4f": "1298340.3229999975",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_9d4f": "1298340.3229999975",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "东北-sum(数量)",
        "__Dim_Color__": "东北-sum(数量)",
        "__Dim_Detail__": "东北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "2976",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2976",
          "me_20250914101727_9d4f": "1298340.3229999975",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2976",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "西南-sum(销售额)",
        "__Dim_Color__": "西南-sum(销售额)",
        "__Dim_Detail__": "西南-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "1481964.9879999934",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "3802",
          "me_20250914101727_9d4f": "1481964.9879999934",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_9d4f": "1481964.9879999934",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "西南-sum(数量)",
        "__Dim_Color__": "西南-sum(数量)",
        "__Dim_Detail__": "西南-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "3802",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "3802",
          "me_20250914101727_9d4f": "1481964.9879999934",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "3802",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "中南-sum(销售额)",
        "__Dim_Color__": "中南-sum(销售额)",
        "__Dim_Detail__": "中南-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "2964133.059999989",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "6674",
          "me_20250914101727_9d4f": "2964133.059999989",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_9d4f": "2964133.059999989",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "中南-sum(数量)",
        "__Dim_Color__": "中南-sum(数量)",
        "__Dim_Detail__": "中南-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "6674",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "6674",
          "me_20250914101727_9d4f": "2964133.059999989",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "6674",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "西北-sum(销售额)",
        "__Dim_Color__": "西北-sum(销售额)",
        "__Dim_Detail__": "西北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "1198059.436000001",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "2281",
          "me_20250914101727_9d4f": "1198059.436000001",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_9d4f": "1198059.436000001",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "西北-sum(数量)",
        "__Dim_Color__": "西北-sum(数量)",
        "__Dim_Detail__": "西北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "2281",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "2281",
          "me_20250914101727_9d4f": "1198059.436000001",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "2281",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "华东-sum(销售额)",
        "__Dim_Color__": "华东-sum(销售额)",
        "__Dim_Detail__": "华东-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "3718172.451000012",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "8704",
          "me_20250914101727_9d4f": "3718172.451000012",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_9d4f": "3718172.451000012",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "华东-sum(数量)",
        "__Dim_Color__": "华东-sum(数量)",
        "__Dim_Detail__": "华东-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "8704",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "8704",
          "me_20250914101727_9d4f": "3718172.451000012",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "8704",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "华北-sum(销售额)",
        "__Dim_Color__": "华北-sum(销售额)",
        "__Dim_Detail__": "华北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "2019475.7170000044",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "4792",
          "me_20250914101727_9d4f": "2019475.7170000044",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_9d4f": "2019475.7170000044",
      },
      {
        "__Dim_Angle__": "消费者",
        "__Dim_ColorId__": "华北-sum(数量)",
        "__Dim_Color__": "华北-sum(数量)",
        "__Dim_Detail__": "华北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "4792",
        "__OriginalData__": {
          "di_20250914101717_6266": "消费者",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "4792",
          "me_20250914101727_9d4f": "2019475.7170000044",
        },
        "di_20250914101717_6266": "消费者",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "4792",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "东北-sum(销售额)",
        "__Dim_Color__": "东北-sum(销售额)",
        "__Dim_Detail__": "东北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "912951.4030000004",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2055",
          "me_20250914101727_9d4f": "912951.4030000004",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_9d4f": "912951.4030000004",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "东北-sum(数量)",
        "__Dim_Color__": "东北-sum(数量)",
        "__Dim_Detail__": "东北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "2055",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "东北",
          "me_20250914101727_1111": "2055",
          "me_20250914101727_9d4f": "912951.4030000004",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "东北",
        "me_20250914101727_1111": "2055",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "中南-sum(销售额)",
        "__Dim_Color__": "中南-sum(销售额)",
        "__Dim_Detail__": "中南-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "1356129.5789999985",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "3079",
          "me_20250914101727_9d4f": "1356129.5789999985",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_9d4f": "1356129.5789999985",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "中南-sum(数量)",
        "__Dim_Color__": "中南-sum(数量)",
        "__Dim_Detail__": "中南-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "3079",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "中南",
          "me_20250914101727_1111": "3079",
          "me_20250914101727_9d4f": "1356129.5789999985",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "中南",
        "me_20250914101727_1111": "3079",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "西南-sum(销售额)",
        "__Dim_Color__": "西南-sum(销售额)",
        "__Dim_Detail__": "西南-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "230624.96800000023",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "748",
          "me_20250914101727_9d4f": "230624.96800000023",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_9d4f": "230624.96800000023",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "西南-sum(数量)",
        "__Dim_Color__": "西南-sum(数量)",
        "__Dim_Detail__": "西南-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "748",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "748",
          "me_20250914101727_9d4f": "230624.96800000023",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "748",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "西北-sum(销售额)",
        "__Dim_Color__": "西北-sum(销售额)",
        "__Dim_Detail__": "西北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "369699.7640000004",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "1018",
          "me_20250914101727_9d4f": "369699.7640000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_9d4f": "369699.7640000004",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "西北-sum(数量)",
        "__Dim_Color__": "西北-sum(数量)",
        "__Dim_Detail__": "西北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "1018",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "1018",
          "me_20250914101727_9d4f": "369699.7640000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "1018",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "华东-sum(销售额)",
        "__Dim_Color__": "华东-sum(销售额)",
        "__Dim_Detail__": "华东-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "2748821.432000004",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "5254",
          "me_20250914101727_9d4f": "2748821.432000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_9d4f": "2748821.432000004",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "华东-sum(数量)",
        "__Dim_Color__": "华东-sum(数量)",
        "__Dim_Detail__": "华东-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "5254",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "5254",
          "me_20250914101727_9d4f": "2748821.432000004",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "5254",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "华北-sum(销售额)",
        "__Dim_Color__": "华北-sum(销售额)",
        "__Dim_Detail__": "华北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "938985.3690000006",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1853",
          "me_20250914101727_9d4f": "938985.3690000006",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_9d4f": "938985.3690000006",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "华北-sum(数量)",
        "__Dim_Color__": "华北-sum(数量)",
        "__Dim_Detail__": "华北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "1853",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1853",
          "me_20250914101727_9d4f": "938985.3690000006",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1853",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "华东-sum(销售额)",
        "__Dim_Color__": "华东-sum(销售额)",
        "__Dim_Detail__": "华东-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "1457499.204",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "3082",
          "me_20250914101727_9d4f": "1457499.204",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_9d4f": "1457499.204",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "华东-sum(数量)",
        "__Dim_Color__": "华东-sum(数量)",
        "__Dim_Detail__": "华东-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "3082",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华东",
          "me_20250914101727_1111": "3082",
          "me_20250914101727_9d4f": "1457499.204",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华东",
        "me_20250914101727_1111": "3082",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "华北-sum(销售额)",
        "__Dim_Color__": "华北-sum(销售额)",
        "__Dim_Detail__": "华北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "655606.930999999",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1828",
          "me_20250914101727_9d4f": "655606.930999999",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_9d4f": "655606.930999999",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "华北-sum(数量)",
        "__Dim_Color__": "华北-sum(数量)",
        "__Dim_Detail__": "华北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "1828",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "华北",
          "me_20250914101727_1111": "1828",
          "me_20250914101727_9d4f": "655606.930999999",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "华北",
        "me_20250914101727_1111": "1828",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "西北-sum(销售额)",
        "__Dim_Color__": "西北-sum(销售额)",
        "__Dim_Detail__": "西北-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "123130.028",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "251",
          "me_20250914101727_9d4f": "123130.028",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_9d4f": "123130.028",
      },
      {
        "__Dim_Angle__": "小型企业",
        "__Dim_ColorId__": "西北-sum(数量)",
        "__Dim_Color__": "西北-sum(数量)",
        "__Dim_Detail__": "西北-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "251",
        "__OriginalData__": {
          "di_20250914101717_6266": "小型企业",
          "di_20250914101717_a7e4": "西北",
          "me_20250914101727_1111": "251",
          "me_20250914101727_9d4f": "123130.028",
        },
        "di_20250914101717_6266": "小型企业",
        "di_20250914101717_a7e4": "西北",
        "me_20250914101727_1111": "251",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "西南-sum(销售额)",
        "__Dim_Color__": "西南-sum(销售额)",
        "__Dim_Detail__": "西南-sum(销售额)",
        "__MeaId__": "me_20250914101727_9d4f",
        "__MeaName__": "sum(销售额)",
        "__MeaValue__": "1167314.5400000024",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "2146",
          "me_20250914101727_9d4f": "1167314.5400000024",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_9d4f": "1167314.5400000024",
      },
      {
        "__Dim_Angle__": "公司",
        "__Dim_ColorId__": "西南-sum(数量)",
        "__Dim_Color__": "西南-sum(数量)",
        "__Dim_Detail__": "西南-sum(数量)",
        "__MeaId__": "me_20250914101727_1111",
        "__MeaName__": "sum(数量)",
        "__MeaValue__": "2146",
        "__OriginalData__": {
          "di_20250914101717_6266": "公司",
          "di_20250914101717_a7e4": "西南",
          "me_20250914101727_1111": "2146",
          "me_20250914101727_9d4f": "1167314.5400000024",
        },
        "di_20250914101717_6266": "公司",
        "di_20250914101717_a7e4": "西南",
        "me_20250914101727_1111": "2146",
      },
    ],
  },
  "innerRadius": 0,
  "label": {
    "formatMethod": [Function],
    "visible": false,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#6F6F6F",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#6F6F6F",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#6F6F6F",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.9,
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "rose": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
        "lineWidth": 1,
      },
    },
    "style": {
      "lineWidth": 0,
      "stroke": "#ffffff",
    },
  },
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [Function],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "rose",
  "valueField": "__MeaValue__",
}
`;

exports[`detail 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "东北-sum(数量)": "东北-sum(数量)",
    "东北-sum(销售额)": "东北-sum(销售额)",
    "中南-sum(数量)": "中南-sum(数量)",
    "中南-sum(销售额)": "中南-sum(销售额)",
    "华东-sum(数量)": "华东-sum(数量)",
    "华东-sum(销售额)": "华东-sum(销售额)",
    "华北-sum(数量)": "华北-sum(数量)",
    "华北-sum(销售额)": "华北-sum(销售额)",
    "西北-sum(数量)": "西北-sum(数量)",
    "西北-sum(销售额)": "西北-sum(销售额)",
    "西南-sum(数量)": "西南-sum(数量)",
    "西南-sum(销售额)": "西南-sum(销售额)",
  },
  "colorItems": [
    "中南-sum(销售额)",
    "中南-sum(数量)",
    "东北-sum(销售额)",
    "东北-sum(数量)",
    "西南-sum(销售额)",
    "西南-sum(数量)",
    "西北-sum(销售额)",
    "西北-sum(数量)",
    "华东-sum(销售额)",
    "华东-sum(数量)",
    "华北-sum(销售额)",
    "华北-sum(数量)",
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
